general repo cleanup and pruning...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout.html
+++ b/layout.html
@@ -140,7 +140,8 @@ $(document).ready(function(){
 				}
 
 			}
-		}, function(k){console.log(k)}))
+		}, 
+		function(k){console.log(k)}))
 
 	// expand the templates...
 	runMagazineTemplates()
