updated custom theme template...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="magazine.css">
 <link rel="stylesheet" href="magazine-themes.css">
-<!--link rel="stylesheet" href="magazine-custom.css"-->
+<link rel="stylesheet" href="magazine-custom.css">
 
 <script src="ext-lib/jquery.js"></script>
 <script src="ext-lib/jquery.touchSwipe.js"></script>
