--- a/layout.html
+++ b/layout.html
@@ -7,6 +7,7 @@
 
 <link rel="stylesheet" href="magazine.css">
 <link rel="stylesheet" href="magazine-themes.css">
+<link rel="stylesheet" href="magazine-custom.css">
 <style>
 
 .viewer {
