experementing with scroll on layout.html (magazine scaling over 1 will break the scrolling -- element is bigger than the scroll area)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout.html
+++ b/layout.html
@@ -22,10 +22,12 @@
 	z-index: 9000;
 	box-shadow: 10px 10px 150px -50px black;
 }
+/*
 .page:hover {
 	z-index: 9000;
 	box-shadow: 10px 10px 150px 0px black;
 }
+*/
 
 .page {
 	-webkit-transition: none;
@@ -84,6 +86,8 @@ $(document).ready(function(){
 <body>
 
 <div class="viewer">
+<!--div class="_scaler">
+<div class="_aligner"-->
 
 	<div class="magazine" name="PortableMag">
 		<div class="cover page">
@@ -434,6 +438,11 @@ $(document).ready(function(){
 			</div>
 		</div>
 	</div>
+
+
+<!--/div>
+</div-->
+</div>
 
 </body>
 </html>
