setup an experiment with the scroll based layout...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -762,6 +762,7 @@ $(document).ready(function(){
 					<p>
 						<a id="downloader" download="magazine.json">download magazine...</a>
 						<input type="file" id="upload" name="files[]"/>
+						<a href="./layout.html">alternative layout</a>
 					</p>
 
 					<hr noshade color="silver">
