--- a/layout.html
+++ b/layout.html
@@ -107,12 +107,15 @@ $(document).ready(function(){
 		_log.scrollTop(_log.prop('scrollHeight'))
 	}
 
-	var CHECK_INTERVAL = 400
+	var CHECK_INTERVAL = 200
 	var touching = false
 	var t
+	var v = $('.viewer')
+	var _scroll_delta = [0, 0]
+	var sd = 5
 
 	function wait_for_scroll_end(){
-		if(!touching){
+		if(!touching && _scroll_delta[0] <= sd && _scroll_delta[1] <= sd){
 			// XXX need to avoid this being called more than once...
 			$('.viewer').trigger('scrollend')
 			t = null
@@ -124,6 +127,10 @@ $(document).ready(function(){
 	$('.viewer')
 		.on('scroll', function(evt){
 			log('scroll...')
+			_scroll_delta = [
+				_scroll_delta[0] - v.scrollLeft(),
+				_scroll_delta[1] - v.scrollTop()
+			]
 
 			if(t == null){
 				t = setTimeout(wait_for_scroll_end, CHECK_INTERVAL)	
