--- a/layout.html
+++ b/layout.html
@@ -165,7 +165,7 @@ $(document).ready(function(){
 				// XXX for some reason, on android, this sets the page but 
 				//		does not actually scroll to it -- no animation and/or
 				//		.ScrollTo does notwork...
-				//setCurrentPage()
+				setTimeout(functio(){setCurrentPage()}, 50)
 			})
 	//}
 
